--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
      style="box-shadow: 0 0 54px rgba(59, 39, 16, 2.5); padding-bottom: 10px">
 
 
-    <form class="form-signin mt-xl-5" method="post" th:action="@{/perform_login}">
+    <form class="form-signin mt-xl-5 p-4" method="post" th:action="@{/perform_login}">
         <h2 class="form-signin-heading">Sign in</h2>
 
         <div class="alert alert-danger" role="alert" th:if="${loginError}">
