--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -48,7 +48,7 @@
 
 
 
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right m-auto">
                     <th:block sec:authorize="isAuthenticated()">
                     <li class="nav-item">
                         <a class="btn btn-success btn-sm ml-3" href="/shopping-cart">
